# OpenGlider

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL  INSTALL.md  LICENSE  MANIFEST.in  README.md  TODO.md  Untitled.ipynb  __init__.py  booyapan.cpp  console.py  conventions.md  mypy.ini  openglider.py  openglider.py~  requires.txt  setup.cfg  setup.py  show_icons.py  test.py  testall.py  testall.sh  upgrade.py
.github/: tests.yml
.github/workflows/: deploy.yml  tests.yml
Cells/: __init__.py
Doc/: Vectorlists.md
Graphics/: Functions.py  __init__.py  __init__.py~  qttest.py
Import/: Excel.py  ODFImport.py  __init__.py  excel.py
Profile/: _Classes.py  _Functions.py  _XFoilCalc.py  __init__.py  test.py
Ribs/: __init__.py  ballooning.py  move.py
Tests/: __init__.py  jona_tests.py  test_vectorlist.py  testcell.py  testcell_midrib.py
Utils/: BSplines.py  Ballooning.py  Bezier.py  Utils.py  __init__.py
Vector/: __init__.py
booya_panelmethod/: booyapan.cpp  booyapan_omp.cpp
cells/: __init__.py
doc/: config.dox
docs/: screen4  unwrap error
docs/freecad_glider_docs/: README.md
docs/ideas/: induced-aoa-and-profile-drag.md
docs/ipython_notebooks/: transformation.ipynb
docs/lines_doc/: fem_lines.md  lines_doc.tex
docs/sphinx/: Makefile  conf.py  index.rst  make.bat  openglider.Graphics.rst  openglider.Utils.rst  openglider.glider.plots.rst  openglider.rst
examples/: berg.json  berg_mini.json
freecad/: console.py  startfreecad.py
freecad/freecad_glider/: __init__.py  default_glider2d.json  glider2d.json  glider_commands.py  glider_metadata.py  init.py  init_gui.py
freecad/glider/: InitGui.py  gliderGui.py  todo
importt/: __init__.py
lib/: .gitignore  README.md
openglider/: README.md  __init__.py  __main__.py  config.json  config.py  console.py  glider.py  mypy.py
openglider/Cells/: __init__.py
openglider/Graphics/: Functions.py  __init__.py
openglider/Import/: Excel.py  ODFImport.py  ODFImport2.py  __init__.py  export_3d.py  import_geometry.py  obj.py
openglider/Input/: test.py
openglider/Profile/: _Classes.py  _XFoilCalc.py  __init__.py
openglider/Ribs/: __init__.py  move.py
openglider/Utils/: Ballooning.py  Bezier.py  Utils.py  __init__.py  bezier.py  cached_property.py  marks.py
openglider/Vector/: __init__.py  projection.py
openglider/airfoil/: README.md  XFoilCalc.py  _Classes.py  __init__.py  _pan_2d.py  _pan_2d_ext.pyx  conformal_mapping.py  pan_2d.py  pan_2d_ext.pyx  parametric.py  profile_2d.py  profile_2d_parametric.py  profile_3d.py  xfoil.py
openglider/freecad/: console.py  startfreecad.py
openglider/glider/: README.md  __init__.py  ballooning.py  cell.py  cell_elements.py  cells.py  curve.py  glider.py  glider_2d.py  names.py  project.py  rib.py  rib_elements.py  ribs.py  shape.py
openglider/graphics/: Functions.py  __init__.py  elements.py  functions.py  qt.py
openglider/gui/: __init__.py  qt.py  threads.py
openglider/input/: __init__.py  ballooning.py  qt.py  shape.py
openglider/jsonify/: __init__.py  encoder.py  legacy_update.py  objects.py
openglider/lines/: README.md  TEST_INPUT_FILE.txt  TEST_INPUT_FILE_1.txt  TEST_INPUT_FILE_2.txt  TEST_INPUT_FILE_3_LINES.txt  TEST_INPUT_FILE_4.txt  __init__.py  _elements.py  _functions.py  _lines.py  elements.py  functions.py  import_text.py  knots.csv  knots.py  line.py  line_set.py  line_types.py  lineset.py  node.py
openglider/materials/: __init__.py  material.py
openglider/mesh/: README.md  __init__.py  dxf_colours.py  group.py  least_square_conformal_mapping.py  mesh.py  meshpy_triangle.py  poly_tri.py  triangulate.py
openglider/numeric/: README.md  __init__.py  fem.py
openglider/physics/: README.md  __init__.py
openglider/plots/: README.md  TODO.md  __init__.py  config.py  cuts.py  lines.py  marks.py  part.py  patterns.py  projection.py  ribs.py  sketches.py  text.py  usage_stats.py
openglider/tests/: test_ballooning.py  test_distribution.py  test_glider.py  test_glider_2d.py  test_glider_exports.py  test_mesh.py  test_patterns.py  test_profile.py  test_rib.py  test_shape.py
openglider/utils/: __init__.py  bezier.py  bezier_ext.pyx  bspline.py  cache.py  cache_lru.py  cached_property.py  colors.py  colour_code.py  config.py  css.py  dataclass.py  dataframe.py  distribution.py  marks.py  plugin.py  queue.py  search.py  table.py  (+2 more)
packaging/: PKGBUILD
scripts/: make_half_cell.py  make_obj.py  timer.py
src/: CMakeLists.txt  pybind.cpp
src/euklid/: CMakeLists.txt  TODO.md  TODO:md  polyline.cpp  polyline.hpp  pybind.cpp  transform.cpp  transform.hpp  vector_2d.cpp  vector_2d.hpp  vector_3d.cpp  vector_3d.hpp
src/euklid/polyline/: common.cpp  interpolation.cpp  interpolation.hpp  polyline.cpp  polyline.hpp  polyline_2d.cpp  polyline_2d.hpp
src/euklid/spline/: basis.cpp  basis.hpp  spline.cpp  spline.hpp
src/euklid/vector/: cut_2d.hpp  rotation_2d.hpp  transform.cpp  transform.hpp  translation.cpp  translation.hpp  vector.cpp  vector.hpp  vector_2d.hpp
src/mesh/: mesh.cpp  mesh.hpp  pybind.cpp
src/util/: math.hpp
test/: __init__.py
tests/: __init__.py  __test_ballooning.py  _deprecated_test_vector.py  _test_fem.py  _test_panelmethod.py  demokite.ods  test_Profile.py  test_Vector.py  test_ballooning.py  test_bezier.py  test_distribution.py  test_fehler_nahtzugabe.py  test_fem.py  test_flatten_list.py  test_glider.py  test_glider_2d.py  test_glider_exports.py  test_lines.py  test_mesh.py  test_odfimport.py  test_panelmethod.py  test_patterns.py  test_profile.py  test_rib.py  test_shape.py  test_vector.py  testcell.py  testcell_midrib.py  testglider.py  visual_test_ballooned_rib.py  visual_test_bezier.py  visual_test_cell.py  visual_test_cell_elements.py  visual_test_fehler_nahtzugabe.py  visual_test_flatten_cell.py  visual_test_flatten_glider.py  visual_test_glider.py  visual_test_glider2d.py  visual_test_graphics.py  visual_test_layer.py  (+8 more)
(+345 files in other folders)
