CMAKE_MINIMUM_REQUIRED(VERSION 3.3)

PROJECT(openglider_cpp)

#set(CMAKE_C_COMPILER)
set(CMAKE_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)

set (CMAKE_CXX_STANDARD 20)
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
#SET(CMAKE_CXX_FLAGS_RELEASE "-O3")

# OPTIONS
OPTION(BUILD_PYTHON_BINDINGS "create python bindings" ON)

# DEPENDENCIES

find_package(pybind11 REQUIRED)
set(PYBIND11_CPP_STANDARD -std=c++14)

find_package(OpenMP)

ADD_SUBDIRECTORY("src" "openglider_cpp")

#ADD_SUBDIRECTORY("tests/")
