[metadata]
name = openglider
version = attr: openglider.__version__
author = airG products
author_email = simon@airg.family
description = A python library for paraglider design
long_description = file: README.md, LICENSE.md
keywords = paraglider, flying
license = GPL-v3
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = False
packages = find:
python_requires = >=3.8
install_requires =
    euklid
    pyfoil
    pydantic
    svgwrite
    numpy
    scipy
    ezdxf
    ezodf
    lxml # missing in ezodf:q;
    pyexcel-ods
    meshpy
    svglib

[options.package_data]
* = py.typed, *.csv, *.svg, tests/common/*.ods

[options.entry_points]
console_scripts =
    executable-name = openglider.gui:start_main_window

[options.extras_require]
gui = 
    qtpy
    pyside2
    qtawesome
    qasync
    qtmodern
    qtconsole
    iconify
    pyqtgraph
    matplotlib
    vtk

[options.packages.find]
exclude =
    *.tests
    *.tests.*